--- a/package.json
+++ b/package.json
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.1.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.6",
+    "expo-font": "^11.10.2",
+    "expo-splash-screen": "^0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-dom": "^18.2.0",
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "^0.19.10",
+    "react-native-webview": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
